[package]
name = "uuid64rs"
version = "0.0.3"
description = "UUID v4 (random) Rust crate with an additional custom base 64 encoding which is web and database friendly"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Dragonrun1/uuid64rs"
readme = "README.md"
repository = "https://github.com/Dragonrun1/uuid64rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.7.3"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
thiserror = "1.0.22"
thiserror-impl = "1.0.22"
