[package]
name = "uuid64rs"
version = "0.0.13"
description = "UUID v4 (random) Rust crate with an additional custom base 64 encoding which is web and database friendly"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Dragonrun1/uuid64rs"
readme = "README.md"
repository = "https://github.com/Dragonrun1/uuid64rs"


[lib]
#crate-type = ["cdylib", "dylib"]

[dependencies]
diesel = "1.4.5"
diesel_derives = "1.4.1"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
thiserror-impl = "1.0.23"
wasm-bindgen = { version = "0.2.70", optional = true }

[features]
default = []
experimental = ["wasm-bindgen"]

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
#wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false

[package.metadata.ssvmup.profile.release]
#wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false

[package.metadata.ssvmup.profile.dev]
#wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
